--- a/package.json
+++ b/package.json
@@ -6,5 +6,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brian Lincoln",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^15.3.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "eslint": "^3.2.2",
+    "eslint-plugin-react": "^6.0.0",
+    "react-dom": "^15.1.0",
+    "webpack": "^1.13.1"
+  }
 }
