--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "devDependencies": {
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "eslint": "^3.2.2",
     "eslint-plugin-react": "^6.0.0",
+    "expose-loader": "^0.7.1",
     "react-dom": "^15.1.0",
     "webpack": "^1.13.1"
   }
