--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
   "author": "Brian Lincoln",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.3.0"
+    "react": "^15.3.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-devtools": "^3.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "eslint": "^3.2.2",
+    "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^6.0.0",
     "expose-loader": "^0.7.1",
     "react-dom": "^15.1.0",
