--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.23.1",
     "eslint": "^3.2.2",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^6.0.0",
     "expose-loader": "^0.7.1",
     "react-dom": "^15.1.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
   }
 }
